google auth meta tag

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&display=swap"
       rel="stylesheet"
     />
+    <meta name="google-site-verification" content="6vzV4arVAXp5RVud6pRXIAmoouXay4WKS6WZV_J6OJQ" />
 
     <title>Sukoon</title>
   </head>
