--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
       href="https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&display=swap"
       rel="stylesheet"
     />
-    <meta name="google-site-verification" content="6vzV4arVAXp5RVud6pRXIAmoouXay4WKS6WZV_J6OJQ" />
+    <meta
+      name="google-site-verification"
+      content="6vzV4arVAXp5RVud6pRXIAmoouXay4WKS6WZV_J6OJQ"
+    />
 
-    <title>Sukoon</title>
+    <meta
+      name="description"
+      content="متجر Sukoon هو وجهتك المثلى لشراء الأثاث في السعودية. نقدم لك مجموعة متنوعة من الأثاث العصري والحديث لتلبية جميع احتياجات منزلك."
+    />
+    <title>Sukoon - متجر الاثاث بالسعودية</title>
   </head>
   <body>
     <div id="root"></div>
